// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components-pro/upload/demo/async.md correctly 1`] = `
<div>
  <div
    class="c7n-pro-upload"
  >
    <div
      class="flex-wrapper"
    >
      <div
        class="c7n-pro-upload-select"
      >
        <button
          class="c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-default c7n-pro-btn-wrapper"
          type="button"
        >
          <i
            class="icon icon-insert_drive_file"
          />
          <span>
            选择文件
          </span>
          <div
            class="c7n-ripple-wrapper"
          />
        </button>
        <input
          accept=".deb,.txt,.pdf,image/*"
          action="//localhost:3000/upload"
          class="c7n-pro-upload"
          headers="[object Object]"
          hidden=""
          multiple=""
          name="file"
          type="file"
        />
        <button
          class="c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-primary c7n-pro-btn-icon-only c7n-pro-btn-wrapper"
          type="button"
        >
          <i
            class="icon icon-file_upload"
          />
          <div
            class="c7n-ripple-wrapper"
          />
        </button>
      </div>
      <div />
    </div>
    <div
      class="c7n-pro-upload-list-empty"
    />
  </div>
</div>
`;

exports[`renders ./components-pro/upload/demo/basic.md correctly 1`] = `
<div>
  <div
    class="c7n-pro-upload"
  >
    <div
      class="flex-wrapper"
    >
      <div
        class="c7n-pro-upload-select"
      >
        <button
          class="c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-default c7n-pro-btn-wrapper"
          type="button"
        >
          <i
            class="icon icon-insert_drive_file"
          />
          <span>
            选择文件
          </span>
          <div
            class="c7n-ripple-wrapper"
          />
        </button>
        <input
          accept=".deb,.txt,.pdf,image/*"
          action="//localhost:3000/upload"
          class="c7n-pro-upload"
          headers="[object Object]"
          hidden=""
          multiple=""
          name="file"
          type="file"
        />
      </div>
      <div />
    </div>
  </div>
</div>
`;

exports[`renders ./components-pro/upload/demo/custom-handler.md correctly 1`] = `
<div>
  <div
    class="c7n-pro-upload"
  >
    <div
      class="flex-wrapper"
    >
      <div
        class="c7n-pro-upload-select"
      >
        <button
          class="c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-default c7n-pro-btn-wrapper"
          type="button"
        >
          <i
            class="icon icon-insert_drive_file"
          />
          <span>
            选择文件
          </span>
          <div
            class="c7n-ripple-wrapper"
          />
        </button>
        <input
          accept=".deb,.txt,.pdf,image/*"
          action="//localhost:3000/upload"
          class="c7n-pro-upload"
          headers="[object Object]"
          hidden=""
          multiple=""
          name="file"
          type="file"
        />
        <button
          class="c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-primary c7n-pro-btn-icon-only c7n-pro-btn-wrapper"
          type="button"
        >
          <i
            class="icon icon-file_upload"
          />
          <div
            class="c7n-ripple-wrapper"
          />
        </button>
      </div>
      <div />
    </div>
    <div
      class="c7n-pro-upload-list-empty"
    />
  </div>
</div>
`;

exports[`renders ./components-pro/upload/demo/data.md correctly 1`] = `
<div>
  <div
    class="c7n-pro-upload"
  >
    <div
      class="flex-wrapper"
    >
      <div
        class="c7n-pro-upload-select"
      >
        <button
          class="c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-default c7n-pro-btn-wrapper"
          type="button"
        >
          <i
            class="icon icon-insert_drive_file"
          />
          <span>
            选择文件
          </span>
          <div
            class="c7n-ripple-wrapper"
          />
        </button>
        <input
          accept=".deb,.txt,.pdf,image/*"
          action="//localhost:3000/upload"
          class="c7n-pro-upload"
          headers="[object Object]"
          hidden=""
          multiple=""
          name="file"
          type="file"
        />
        <button
          class="c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-primary c7n-pro-btn-icon-only c7n-pro-btn-wrapper"
          type="button"
        >
          <i
            class="icon icon-file_upload"
          />
          <div
            class="c7n-ripple-wrapper"
          />
        </button>
      </div>
      <div />
    </div>
    <div
      class="c7n-pro-upload-list-empty"
    />
  </div>
</div>
`;

exports[`renders ./components-pro/upload/demo/extra.md correctly 1`] = `
<div>
  <div
    class="c7n-pro-upload"
  >
    <div
      class="flex-wrapper"
    >
      <div
        class="c7n-pro-upload-select"
      >
        <button
          class="c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-default c7n-pro-btn-wrapper"
          type="button"
        >
          <i
            class="icon icon-insert_drive_file"
          />
          <span>
            选择文件
          </span>
          <div
            class="c7n-ripple-wrapper"
          />
        </button>
        <input
          accept="image/*"
          action="//localhost:3000/upload"
          class="c7n-pro-upload"
          extra="[object Object]"
          headers="[object Object]"
          hidden=""
          multiple=""
          name="file"
          type="file"
        />
        <button
          class="c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-primary c7n-pro-btn-icon-only c7n-pro-btn-wrapper"
          type="button"
        >
          <i
            class="icon icon-file_upload"
          />
          <div
            class="c7n-ripple-wrapper"
          />
        </button>
      </div>
      <div>
        <p>
          请上传图片文件(jpg, jpeg, png...)
        </p>
      </div>
    </div>
    <div
      class="c7n-pro-upload-list-empty"
    />
  </div>
</div>
`;

exports[`renders ./components-pro/upload/demo/length.md correctly 1`] = `
<div>
  <div
    class="c7n-pro-upload"
  >
    <div
      class="flex-wrapper"
    >
      <div
        class="c7n-pro-upload-select"
      >
        <button
          class="c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-default c7n-pro-btn-wrapper"
          type="button"
        >
          <i
            class="icon icon-insert_drive_file"
          />
          <span>
            选择文件
          </span>
          <div
            class="c7n-ripple-wrapper"
          />
        </button>
        <input
          accept=".deb,.txt,.pdf,image/*"
          action="//localhost:3000/upload"
          class="c7n-pro-upload"
          headers="[object Object]"
          hidden=""
          multiple=""
          name="file"
          type="file"
        />
        <button
          class="c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-primary c7n-pro-btn-icon-only c7n-pro-btn-wrapper"
          type="button"
        >
          <i
            class="icon icon-file_upload"
          />
          <div
            class="c7n-ripple-wrapper"
          />
        </button>
      </div>
      <div />
    </div>
    <div
      class="c7n-pro-upload-list-empty"
    />
  </div>
</div>
`;

exports[`renders ./components-pro/upload/demo/upload-method.md correctly 1`] = `
<form
  class="c7n-pro-form c7n-pro-form-wrapper"
  header="文件管理"
  name="form-1"
  novalidate=""
>
  <div
    class="c7n-pro-form-header"
  >
    文件管理
  </div>
  <table>
    <colgroup>
      <col
        style="width:1rem"
      />
      <col />
    </colgroup>
    <tbody>
      <tr>
        <td
          class="c7n-pro-field-label c7n-pro-field-label-right c7n-pro-field-label-output"
          rowspan="1"
        >
          <label>
            选择Logo
          </label>
        </td>
        <td
          colspan="1"
          rowspan="1"
        >
          <div
            class="c7n-pro-field-wrapper c7n-pro-field-output"
          >
            <span
              class="c7n-pro-output c7n-pro-output-wrapper c7n-pro-field"
              label="选择Logo"
            >
              <div
                class="c7n-pro-upload"
              >
                <div
                  class="flex-wrapper"
                >
                  <div
                    class="c7n-pro-upload-select"
                  >
                    <button
                      class="c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-default c7n-pro-btn-wrapper"
                      type="button"
                    >
                      <i
                        class="icon icon-insert_drive_file"
                      />
                      <span>
                        选择文件
                      </span>
                      <div
                        class="c7n-ripple-wrapper"
                      />
                    </button>
                    <input
                      accept=".deb,.txt,.pdf,image/*"
                      action="//localhost:3000/upload"
                      class="c7n-pro-upload"
                      headers="[object Object]"
                      hidden=""
                      multiple=""
                      name="file"
                      type="file"
                    />
                  </div>
                  <div />
                </div>
                <div
                  class="c7n-pro-upload-list-empty"
                />
              </div>
            </span>
          </div>
        </td>
      </tr>
      <tr>
        <td
          class="c7n-pro-field-label c7n-pro-field-label-right"
          rowspan="1"
        >
          <label />
        </td>
        <td
          colspan="1"
          rowspan="1"
        >
          <div
            class="c7n-pro-field-wrapper"
          >
            <button
              class="c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-primary c7n-pro-btn-wrapper c7n-pro-field"
              colindex="0"
              rowindex="1"
              style="margin-bottom:10px"
              type="button"
            >
              <span>
                提交
              </span>
              <div
                class="c7n-ripple-wrapper"
              />
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</form>
`;
